common/parser/src/snapshots/parser__tests__multiple_relations-2.snap
---
source: common/parser/src/tests.rs
expression: sdl
---
type Author {
	lastname: String!
	published(after: String, before: String, first: Int, last: Int): PostConnection
	commented(after: String, before: String, first: Int, last: Int): CommentConnection
	"""
	Unique identifier
	"""
	id: ID!
	"""
	when the model was updated
	"""
	updatedAt: DateTime!
	"""
	when the model was created
	"""
	createdAt: DateTime!
}
input AuthorByInput {
	id: ID
}
type AuthorConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [AuthorEdge]
}
"""
Input to create a Author
"""
input AuthorCreateInput {
	lastname: String!
	published: [PublishedCreatePostRelationInput]
	commented: [CommentedCreateCommentRelationInput]
}
type AuthorCreatePayload {
	author: Author
}
type AuthorDeletePayload {
	deletedId: ID!
}
type AuthorEdge {
	node: Author!
	cursor: String!
}
"""
Input to update a Author
"""
input AuthorUpdateInput {
	lastname: String
	published: [PublishedUpdatePostRelationInput]
	commented: [CommentedUpdateCommentRelationInput]
}
type AuthorUpdatePayload {
	author: Author
}
type Comment {
	author: Author!
	post: Post
	comment: String!
	like: Int!
	"""
	Unique identifier
	"""
	id: ID!
	"""
	when the model was updated
	"""
	updatedAt: DateTime!
	"""
	when the model was created
	"""
	createdAt: DateTime!
}
input CommentByInput {
	id: ID
}
type CommentConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [CommentEdge]
}
"""
Input to create a Comment
"""
input CommentCreateInput {
	author: CommentedCreateAuthorRelationInput!
	post: CommentsCreatePostRelationInput
	comment: String!
	like: Int!
}
type CommentCreatePayload {
	comment: Comment
}
type CommentDeletePayload {
	deletedId: ID!
}
type CommentEdge {
	node: Comment!
	cursor: String!
}
"""
Input to update a Comment
"""
input CommentUpdateInput {
	author: CommentedUpdateAuthorRelationInput
	post: CommentsUpdatePostRelationInput
	comment: String
	like: IntOperationsInput
}
type CommentUpdatePayload {
	comment: Comment
}
"""
Input to create a Author for the commented relation of Comment
"""
input CommentedCreateAuthorInput {
	lastname: String!
	published: [PublishedCreatePostRelationInput]
	commented: [CommentedCreateCommentRelationInput]
}
"""
Input to link to or create a Author for the commented relation of Comment
"""
input CommentedCreateAuthorRelationInput {
	create: CommentedCreateAuthorInput
	link: ID
}
"""
Input to create a Comment for the commented relation of Author
"""
input CommentedCreateCommentInput {
	post: CommentsCreatePostRelationInput
	comment: String!
	like: Int!
}
"""
Input to link to or create a Comment for the commented relation of Author
"""
input CommentedCreateCommentRelationInput {
	create: CommentedCreateCommentInput
	link: ID
}
"""
Input to link/unlink to or create a Author for the commented relation of Comment
"""
input CommentedUpdateAuthorRelationInput {
	create: CommentedCreateAuthorInput
	link: ID
	unlink: ID
}
"""
Input to link/unlink to or create a Comment for the commented relation of Author
"""
input CommentedUpdateCommentRelationInput {
	create: CommentedCreateCommentInput
	link: ID
	unlink: ID
}
"""
Input to create a Comment for the comments relation of Post
"""
input CommentsCreateCommentInput {
	author: CommentedCreateAuthorRelationInput!
	comment: String!
	like: Int!
}
"""
Input to link to or create a Comment for the comments relation of Post
"""
input CommentsCreateCommentRelationInput {
	create: CommentsCreateCommentInput
	link: ID
}
"""
Input to create a Post for the comments relation of Comment
"""
input CommentsCreatePostInput {
	content: String!
	author: PublishedCreateAuthorRelationInput
	comments: [CommentsCreateCommentRelationInput]
}
"""
Input to link to or create a Post for the comments relation of Comment
"""
input CommentsCreatePostRelationInput {
	create: CommentsCreatePostInput
	link: ID
}
"""
Input to link/unlink to or create a Comment for the comments relation of Post
"""
input CommentsUpdateCommentRelationInput {
	create: CommentsCreateCommentInput
	link: ID
	unlink: ID
}
"""
Input to link/unlink to or create a Post for the comments relation of Comment
"""
input CommentsUpdatePostRelationInput {
	create: CommentsCreatePostInput
	link: ID
	unlink: ID
}
"""
A date-time string at UTC, such as 2007-12-03T10:15:30Z, is compliant with the date-time format outlined in section 5.6 of the RFC 3339
profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.

This scalar is a description of an exact instant on the timeline such as the instant that a user account was created.

# Input Coercion

When expected as an input type, only RFC 3339 compliant date-time strings are accepted. All other input values raise a query error indicating an incorrect type.

# Result Coercion

Where an RFC 3339 compliant date-time string has a time-zone other than UTC, it is shifted to UTC.
For example, the date-time string 2016-01-01T14:10:20+01:00 is shifted to 2016-01-01T13:10:20Z.
"""
scalar DateTime
"""
Possible operations for an Int field
"""
input IntOperationsInput {
	set: Int
	increment: Int
	decrement: Int
}
type Mutation {
	"""
	Create a Author
	"""
	authorCreate(input: AuthorCreateInput!): AuthorCreatePayload
	"""
	Update a Author
	"""
	authorUpdate(by: AuthorByInput!, input: AuthorUpdateInput!): AuthorUpdatePayload
	"""
	Delete a Author by ID or unique field
	"""
	authorDelete(by: AuthorByInput!): AuthorDeletePayload
	"""
	Create a Post
	"""
	postCreate(input: PostCreateInput!): PostCreatePayload
	"""
	Update a Post
	"""
	postUpdate(by: PostByInput!, input: PostUpdateInput!): PostUpdatePayload
	"""
	Delete a Post by ID or unique field
	"""
	postDelete(by: PostByInput!): PostDeletePayload
	"""
	Create a Comment
	"""
	commentCreate(input: CommentCreateInput!): CommentCreatePayload
	"""
	Update a Comment
	"""
	commentUpdate(by: CommentByInput!, input: CommentUpdateInput!): CommentUpdatePayload
	"""
	Delete a Comment by ID or unique field
	"""
	commentDelete(by: CommentByInput!): CommentDeletePayload
}
type PageInfo {
	hasPreviousPage: Boolean!
	hasNextPage: Boolean!
	startCursor: String
	endCursor: String
}
type Post {
	content: String!
	author: Author
	comments(after: String, before: String, first: Int, last: Int): CommentConnection
	"""
	Unique identifier
	"""
	id: ID!
	"""
	when the model was updated
	"""
	updatedAt: DateTime!
	"""
	when the model was created
	"""
	createdAt: DateTime!
}
input PostByInput {
	id: ID
}
type PostConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [PostEdge]
}
"""
Input to create a Post
"""
input PostCreateInput {
	content: String!
	author: PublishedCreateAuthorRelationInput
	comments: [CommentsCreateCommentRelationInput]
}
type PostCreatePayload {
	post: Post
}
type PostDeletePayload {
	deletedId: ID!
}
type PostEdge {
	node: Post!
	cursor: String!
}
"""
Input to update a Post
"""
input PostUpdateInput {
	content: String
	author: PublishedUpdateAuthorRelationInput
	comments: [CommentsUpdateCommentRelationInput]
}
type PostUpdatePayload {
	post: Post
}
"""
Input to create a Author for the published relation of Post
"""
input PublishedCreateAuthorInput {
	lastname: String!
	published: [PublishedCreatePostRelationInput]
	commented: [CommentedCreateCommentRelationInput]
}
"""
Input to link to or create a Author for the published relation of Post
"""
input PublishedCreateAuthorRelationInput {
	create: PublishedCreateAuthorInput
	link: ID
}
"""
Input to create a Post for the published relation of Author
"""
input PublishedCreatePostInput {
	content: String!
	comments: [CommentsCreateCommentRelationInput]
}
"""
Input to link to or create a Post for the published relation of Author
"""
input PublishedCreatePostRelationInput {
	create: PublishedCreatePostInput
	link: ID
}
"""
Input to link/unlink to or create a Author for the published relation of Post
"""
input PublishedUpdateAuthorRelationInput {
	create: PublishedCreateAuthorInput
	link: ID
	unlink: ID
}
"""
Input to link/unlink to or create a Post for the published relation of Author
"""
input PublishedUpdatePostRelationInput {
	create: PublishedCreatePostInput
	link: ID
	unlink: ID
}
type Query {
	"""
	Query a single Author by an ID or a unique field
	"""
	author(by: AuthorByInput!): Author
	"""
	Paginated query to fetch the whole list of `Author`.
	"""
	authorCollection(after: String, before: String, first: Int, last: Int): AuthorConnection
	"""
	Query a single Post by an ID or a unique field
	"""
	post(by: PostByInput!): Post
	"""
	Paginated query to fetch the whole list of `Post`.
	"""
	postCollection(after: String, before: String, first: Int, last: Int): PostConnection
	"""
	Query a single Comment by an ID or a unique field
	"""
	comment(by: CommentByInput!): Comment
	"""
	Paginated query to fetch the whole list of `Comment`.
	"""
	commentCollection(after: String, before: String, first: Int, last: Int): CommentConnection
}
schema {
	query: Query
	mutation: Mutation
}

